test/tests/stages/9_functions/valid/arguments_in_registers/single_arg.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(twice)
  (
  int
  identifier(x)
  )
  {
  return
  const int(2)
  *
  identifier(x)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(twice)
  (
  const int(3)
  )
  ;
  }
