test/tests/stages/9_functions/invalid_declarations/extra_credit/decrement_fun_call.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  (
  )
  --
  ;
  }
